# ai_decision_simulator

./: Dockerfile  Dockerfile.celery  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  test.db
app/: main.py
app/api/: endpoints.py
app/core/: config.py  exceptions.py  logging_config.py
app/db/: session.py
app/models/: database.py
app/schemas/: schemas.py
app/services/: celery_worker.py  financial_data.py  financial_data_service.py  llm_service.py  mock_data.py  simulation_engine.py
static/js/: app.js
templates/: index.html
tests/: conftest.py  test_api.py  test_fastapi.py  test_simulation.py
